--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "format": "prettier --write .",
+    "lint": "ng lint --fix",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "prepare": "husky install"
@@ -27,7 +28,7 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.3",
+    "@angular-devkit/build-angular": "16.1.3",
     "@angular-eslint/builder": "16.0.3",
     "@angular-eslint/eslint-plugin": "16.0.3",
     "@angular-eslint/eslint-plugin-template": "16.0.3",
@@ -40,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "5.59.7",
     "@typescript-eslint/parser": "5.59.7",
     "eslint": "^8.40.0",
+    "husky": "^8.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -47,7 +49,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "2.8.8",
-    "typescript": "~5.1.3",
-    "husky": "^8.0.0"
+    "typescript": "~5.1.3"
   }
 }
