chore(INIT): Update sonar-cloud properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=goldhumorist_swipe-tube_fe
 sonar.organization=goldhumorist
 
+sonar.coverage.minimum=0
+sonar.coverage.exclusions=**
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=swipe-tube_fe
 #sonar.projectVersion=1.0
