--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@ngrx/store": "16.0.1",
+    "angular-notifier": "14.0.0",
     "husky": "8.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -40,6 +41,7 @@
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.59.7",
     "@typescript-eslint/parser": "5.59.7",
+    "autoprefixer": "10.4.14",
     "eslint": "^8.40.0",
     "husky": "^8.0.0",
     "jasmine-core": "~4.6.0",
@@ -48,7 +50,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "8.4.24",
     "prettier": "2.8.8",
+    "tailwindcss": "3.3.2",
     "typescript": "~5.1.3"
   }
 }
