--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,8 +38,7 @@
       "rules": {}
     },
     {
-      "files": ["*.ts"],
-      "extends": ["plugin:@ngrx/recommended-requiring-type-checking"]
+      "files": ["*.ts"]
     }
   ]
 }
