--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
-    "@ngrx/store": "16.0.1",
+    "@ngrx/effects": "16.1.0",
+    "@ngrx/store": "16.1.0",
+    "@ngrx/store-devtools": "16.1.0",
     "angular-notifier": "14.0.0",
     "husky": "8.0.3",
     "rxjs": "~7.8.0",
