--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@fortawesome/angular-fontawesome": "0.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@ngrx/effects": "16.1.0",
     "@ngrx/store": "16.1.0",
     "@ngrx/store-devtools": "16.1.0",
